enxuga documentação do repositório e corrige 26 links quebrados
Reescreve os READMEs das 5 apps removendo conteúdo fictício (Strategy
Pattern, classes e pacotes que não existem mais no código) e
duplicado do CLAUDE.md/AGENTS.md; cria o README que faltava em
temporiza-autorizacao; remove HELP.md e o stub vazio de
run_postgres16_ja_com_cron_partman; e corrige todos os links
quebrados do repo por causa raiz (base relativa errada, arquivo
renomeado/movido, ou change arquivada — repontados para a spec
correspondente).

Corrige também a contradição de status HTTP nas specs
(400 → 422/500, conforme o comportamento real verificado por teste)
e um defeito real nos comandos de debug do infra/local/redis/README.md
(chaves Redis sem hash tag).

Aplica a change enxugar-documentacao-repo (35/35 tarefas concluídas),
que dependia de limpar-codigo-das-apps já estar mesclada.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>